--- a/arch/arm64/configs/k06td_a_defconfig
+++ b/arch/arm64/configs/k06td_a_defconfig
@@ -1201,6 +1201,7 @@ CONFIG_CUSTOM_KERNEL_LCM="boyi_otm1287_hd720_dsi_vdo lide_rm68200_hd720_dsi_vdo"
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
+CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="1280"
 CONFIG_LCM_WIDTH="720"
