--- a/arch/arm64/configs/k06td_a_defconfig
+++ b/arch/arm64/configs/k06td_a_defconfig
@@ -1676,6 +1676,10 @@ CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_FT5X0X is not set
 CONFIG_TOUCHSCREEN_MTK_FT3327=y
 CONFIG_TOUCHSCREEN_HIMAX_852XES=y
+# Smartwake
+CONFIG_TOUCHSCREEN_SMARTWAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_POCKETMOD=y
 CONFIG_KEYBOARD_MTK=y
 # CONFIG_KEYBOARD_HID is not set
 # CONFIG_ONEKEY_REBOOT_NORMAL_MODE is not set
