re-generate defconfig

--- a/arch/arm64/configs/k06td_a_defconfig
+++ b/arch/arm64/configs/k06td_a_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.19 Kernel Configuration
+# Linux/arm64 3.18.21 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -245,8 +245,10 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -511,9 +513,24 @@ CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -1048,6 +1065,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
+CONFIG_POCKETMOD=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1128,6 +1146,7 @@ CONFIG_MTK_PMIC=y
 # CONFIG_MTK_SWITCH_INPUT_OUTPUT_CURRENT_SUPPORT is not set
 # CONFIG_MTK_BIF_SUPPORT is not set
 # CONFIG_MTK_DYNAMIC_BAT_CV_SUPPORT is not set
+# CONFIG_PWR_LOSS_MTK_TEST is not set
 CONFIG_MTK_PMIC_WRAP=y
 CONFIG_MTK_SYSENV=y
 CONFIG_MTPROF=y
@@ -1263,6 +1282,7 @@ CONFIG_MTK_HWMON=y
 # CONFIG_CUSTOM_KERNEL_FREEFALL_SENSOR is not set
 # CONFIG_MTK_SCP_SENSORHUB is not set
 # CONFIG_TRUSTONIC_TEE_SUPPORT is not set
+# CONFIG_MT_TRUSTONIC_TEE_DEBUGFS is not set
 # CONFIG_MICROTRUST_TEE_SUPPORT is not set
 CONFIG_MTK_FREQ_HOPPING=y
 CONFIG_MTK_SYS_CIRQ=y
@@ -1665,6 +1685,9 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SUR40 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
+CONFIG_TOUCHSCREEN_SMARTWAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_GT1151 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT928 is not set
@@ -1676,10 +1699,6 @@ CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_FT5X0X is not set
 CONFIG_TOUCHSCREEN_MTK_FT3327=y
 CONFIG_TOUCHSCREEN_HIMAX_852XES=y
-# Smartwake
-CONFIG_TOUCHSCREEN_SMARTWAKE=y
-CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
-CONFIG_POCKETMOD=y
 CONFIG_KEYBOARD_MTK=y
 # CONFIG_KEYBOARD_HID is not set
 # CONFIG_ONEKEY_REBOOT_NORMAL_MODE is not set
