actually really re-generate defeconfig
previous commit was cherry-picked

--- a/arch/arm64/configs/k06td_a_defconfig
+++ b/arch/arm64/configs/k06td_a_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.21 Kernel Configuration
+# Linux/arm64 3.18.48 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -349,6 +349,7 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
+# CONFIG_FRONTSWAP is not set
 # CONFIG_CMA is not set
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -356,6 +357,7 @@ CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
+# CONFIG_ZNDSWAP is not set
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -394,6 +396,7 @@ CONFIG_COMPAT=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_WAKELOCK=y
+# CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -954,6 +957,7 @@ CONFIG_MTD_BLOCK=y
 # CONFIG_SSFDC is not set
 # CONFIG_SM_FTL is not set
 # CONFIG_MTD_OOPS is not set
+# CONFIG_MTD_SWAP is not set
 
 #
 # RAM/ROM/Flash chip drivers
